allow specification of rotation of images. bug: rotated images still overflow the carousel. solution may be to be a bit more forceful about heights of the various elements

--- a/style.less
+++ b/style.less
@@ -11,6 +11,30 @@ body {
 	background: @serenity;
 }
 
+.rotate90 {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
+.rotate270 {
+    -webkit-transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    transform: rotate(270deg);
+}
+
+.rotate180 {
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
+
 .travel-entry {
 	border-radius: 5px;
 	box-shadow: 2px 1px 1px #ddd;
@@ -26,6 +50,14 @@ body {
 	.images {
 		// kludge to make sure images don't overflow the travel section border radius
 		-webkit-mask-image: -webkit-radial-gradient(circle, white 100%, black 100%);
+	}
+
+
+
+	.carousel {
+		.active .item {
+			background-color: #343435;
+		}
 	}
 }
 
